Fsub/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input SHOWCONTEXT DSEMI
   3        | input DSEMI
   4        | input oneREPL

   5  oneREPL : Command DSEMI
   6          | Command SEMI oneREPL

   7  toplevel : EOF
   8           | Command SEMI toplevel

   9  Command : TmWrap
  10          | UCID TyBinder
  11          | LCID Binder

  12  TyBinder : OTy
  13           | EQ Ty

  14  Binder : COLON Ty
  15         | EQ Tm

  16  OTy :
  17      | SUB Ty

  18  Ty : ArrTy
  19     | ALL UCID OTy DOT Ty
  20     | SOME UCID OTy DOT Ty

  21  ArrTy : ATy ARROW ArrTy
  22        | ATy

  23  ATy : UCID
  24      | LPAREN Ty RPAREN
  25      | TOP
  26      | FLOAT
  27      | STRING
  28      | BOOL
  29      | NAT
  30      | UNITTYPE
  31      | LCUR TyFlds RCUR

  32  TyFlds :
  33         | NETyFlds

  34  NETyFlds : TyFld
  35           | TyFld COMMA NETyFlds

  36  TyFld : LCID COLON Ty
  37        | Ty

  38  TmWrap : TmWrap COMMA LCID EQ Tm
  39         | Tm WHERE LCID EQ Tm
  40         | Tm

  41  Tm : AppTm
  42     | LET LCID EQ Tm IN Tm
  43     | LET USCORE EQ Tm IN Tm
  44     | LAM LCID COLON Ty DOT Tm
  45     | LAM UCID OTy DOT Tm
  46     | LET LCUR UCID COMMA LCID RCUR EQ Tm IN Tm
  47     | IF Tm THEN Tm ELSE Tm
  48     | LETREC LCID COLON Ty EQ Tm IN Tm

  49  AppTm : PathTm
  50        | PathTm TIMESFLOAT PathTm
  51        | FIX PathTm
  52        | SUCC PathTm
  53        | PRED PathTm
  54        | ISZERO PathTm
  55        | AppTm PathTm
  56        | AppTm LSQUARE Ty RSQUARE

  57  PathTm : PathTm DOT LCID
  58         | PathTm DOT INTV
  59         | AscribeTm

  60  AscribeTm : ATm AS Ty
  61            | ATm

  62  ATm : LPAREN TmSeq RPAREN
  63      | LCUR STAR Ty COMMA Tm RCUR AS Ty
  64      | LCUR Flds RCUR
  65      | LCID
  66      | STRINGV
  67      | FLOATV
  68      | UNIT
  69      | TRUE
  70      | FALSE
  71      | INTV

  72  TmSeq : Tm
  73        | Tm SEMI TmSeq

  74  Flds :
  75       | NEFlds

  76  NEFlds : Fld
  77         | Fld COMMA NEFlds

  78  Fld : LCID EQ Tm
  79      | Tm

  80  %entry% : '\001' toplevel
  81          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (80)

	LETREC  shift 4
	FIX  shift 5
	UNIT  shift 6
	LET  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LAM  shift 11
	IF  shift 12
	TRUE  shift 13
	FALSE  shift 14
	UCID  shift 15
	LCID  shift 16
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	EOF  shift 20
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	toplevel  goto 23
	Command  goto 24
	TmWrap  goto 25
	Tm  goto 26
	AppTm  goto 27
	PathTm  goto 28
	AscribeTm  goto 29
	ATm  goto 30


state 2
	%entry% : '\002' . input  (81)
	input : .  (1)

	.  reduce 1

	input  goto 31


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	Tm : LETREC . LCID COLON Ty EQ Tm IN Tm  (48)

	LCID  shift 32
	.  error


state 5
	AppTm : FIX . PathTm  (51)

	UNIT  shift 6
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	PathTm  goto 34
	AscribeTm  goto 29
	ATm  goto 30


state 6
	ATm : UNIT .  (68)

	.  reduce 68


state 7
	Tm : LET . LCID EQ Tm IN Tm  (42)
	Tm : LET . USCORE EQ Tm IN Tm  (43)
	Tm : LET . LCUR UCID COMMA LCID RCUR EQ Tm IN Tm  (46)

	LCID  shift 35
	LCUR  shift 36
	USCORE  shift 37
	.  error


state 8
	AppTm : SUCC . PathTm  (52)

	UNIT  shift 6
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	PathTm  goto 38
	AscribeTm  goto 29
	ATm  goto 30


state 9
	AppTm : PRED . PathTm  (53)

	UNIT  shift 6
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	PathTm  goto 39
	AscribeTm  goto 29
	ATm  goto 30


state 10
	AppTm : ISZERO . PathTm  (54)

	UNIT  shift 6
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	PathTm  goto 40
	AscribeTm  goto 29
	ATm  goto 30


state 11
	Tm : LAM . LCID COLON Ty DOT Tm  (44)
	Tm : LAM . UCID OTy DOT Tm  (45)

	UCID  shift 41
	LCID  shift 42
	.  error


state 12
	Tm : IF . Tm THEN Tm ELSE Tm  (47)

	LETREC  shift 4
	FIX  shift 5
	UNIT  shift 6
	LET  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LAM  shift 11
	IF  shift 12
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	Tm  goto 43
	AppTm  goto 27
	PathTm  goto 28
	AscribeTm  goto 29
	ATm  goto 30


state 13
	ATm : TRUE .  (69)

	.  reduce 69


state 14
	ATm : FALSE .  (70)

	.  reduce 70


state 15
	Command : UCID . TyBinder  (10)
	OTy : .  (16)

	SUB  shift 44
	EQ  shift 45
	SEMI  reduce 16
	DSEMI  reduce 16

	TyBinder  goto 46
	OTy  goto 47


state 16
	Command : LCID . Binder  (11)
	ATm : LCID .  (65)

	COLON  shift 48
	EQ  shift 49
	TIMESFLOAT  reduce 65
	AS  reduce 65
	UNIT  reduce 65
	WHERE  reduce 65
	TRUE  reduce 65
	FALSE  reduce 65
	LCID  reduce 65
	INTV  reduce 65
	FLOATV  reduce 65
	STRINGV  reduce 65
	COMMA  reduce 65
	DOT  reduce 65
	LCUR  reduce 65
	LPAREN  reduce 65
	LSQUARE  reduce 65
	SEMI  reduce 65
	DSEMI  reduce 65

	Binder  goto 50


state 17
	ATm : INTV .  (71)

	.  reduce 71


state 18
	ATm : FLOATV .  (67)

	.  reduce 67


state 19
	ATm : STRINGV .  (66)

	.  reduce 66


state 20
	toplevel : EOF .  (7)

	.  reduce 7


state 21
	ATm : LCUR . STAR Ty COMMA Tm RCUR AS Ty  (63)
	ATm : LCUR . Flds RCUR  (64)
	Flds : .  (74)

	LETREC  shift 4
	FIX  shift 5
	UNIT  shift 6
	LET  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LAM  shift 11
	IF  shift 12
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 51
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	STAR  shift 52
	RCUR  reduce 74

	Tm  goto 53
	AppTm  goto 27
	PathTm  goto 28
	AscribeTm  goto 29
	ATm  goto 30
	Flds  goto 54
	NEFlds  goto 55
	Fld  goto 56


state 22
	ATm : LPAREN . TmSeq RPAREN  (62)

	LETREC  shift 4
	FIX  shift 5
	UNIT  shift 6
	LET  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LAM  shift 11
	IF  shift 12
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	Tm  goto 57
	AppTm  goto 27
	PathTm  goto 28
	AscribeTm  goto 29
	ATm  goto 30
	TmSeq  goto 58


state 23
	%entry% : '\001' toplevel .  (80)

	.  reduce 80


state 24
	toplevel : Command . SEMI toplevel  (8)

	SEMI  shift 59
	.  error


state 25
	Command : TmWrap .  (9)
	TmWrap : TmWrap . COMMA LCID EQ Tm  (38)

	COMMA  shift 60
	SEMI  reduce 9
	DSEMI  reduce 9


state 26
	TmWrap : Tm . WHERE LCID EQ Tm  (39)
	TmWrap : Tm .  (40)

	WHERE  shift 61
	COMMA  reduce 40
	SEMI  reduce 40
	DSEMI  reduce 40


state 27
	Tm : AppTm .  (41)
	AppTm : AppTm . PathTm  (55)
	AppTm : AppTm . LSQUARE Ty RSQUARE  (56)

	UNIT  shift 6
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	LSQUARE  shift 62
	WHERE  reduce 41
	IN  reduce 41
	THEN  reduce 41
	ELSE  reduce 41
	COMMA  reduce 41
	RCUR  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	DSEMI  reduce 41

	PathTm  goto 63
	AscribeTm  goto 29
	ATm  goto 30


state 28
	AppTm : PathTm .  (49)
	AppTm : PathTm . TIMESFLOAT PathTm  (50)
	PathTm : PathTm . DOT LCID  (57)
	PathTm : PathTm . DOT INTV  (58)

	TIMESFLOAT  shift 64
	DOT  shift 65
	UNIT  reduce 49
	WHERE  reduce 49
	IN  reduce 49
	THEN  reduce 49
	ELSE  reduce 49
	TRUE  reduce 49
	FALSE  reduce 49
	LCID  reduce 49
	INTV  reduce 49
	FLOATV  reduce 49
	STRINGV  reduce 49
	COMMA  reduce 49
	LCUR  reduce 49
	LPAREN  reduce 49
	LSQUARE  reduce 49
	RCUR  reduce 49
	RPAREN  reduce 49
	SEMI  reduce 49
	DSEMI  reduce 49


state 29
	PathTm : AscribeTm .  (59)

	.  reduce 59


state 30
	AscribeTm : ATm . AS Ty  (60)
	AscribeTm : ATm .  (61)

	AS  shift 66
	TIMESFLOAT  reduce 61
	UNIT  reduce 61
	WHERE  reduce 61
	IN  reduce 61
	THEN  reduce 61
	ELSE  reduce 61
	TRUE  reduce 61
	FALSE  reduce 61
	LCID  reduce 61
	INTV  reduce 61
	FLOATV  reduce 61
	STRINGV  reduce 61
	COMMA  reduce 61
	DOT  reduce 61
	LCUR  reduce 61
	LPAREN  reduce 61
	LSQUARE  reduce 61
	RCUR  reduce 61
	RPAREN  reduce 61
	SEMI  reduce 61
	DSEMI  reduce 61


state 31
	input : input . SHOWCONTEXT DSEMI  (2)
	input : input . DSEMI  (3)
	input : input . oneREPL  (4)
	%entry% : '\002' input .  (81)

	SHOWCONTEXT  shift 67
	LETREC  shift 4
	FIX  shift 5
	UNIT  shift 6
	LET  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LAM  shift 11
	IF  shift 12
	TRUE  shift 13
	FALSE  shift 14
	UCID  shift 15
	LCID  shift 16
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	DSEMI  shift 68
	$end  reduce 81

	oneREPL  goto 69
	Command  goto 70
	TmWrap  goto 25
	Tm  goto 26
	AppTm  goto 27
	PathTm  goto 28
	AscribeTm  goto 29
	ATm  goto 30


state 32
	Tm : LETREC LCID . COLON Ty EQ Tm IN Tm  (48)

	COLON  shift 71
	.  error


state 33
	ATm : LCID .  (65)

	.  reduce 65


state 34
	AppTm : FIX PathTm .  (51)
	PathTm : PathTm . DOT LCID  (57)
	PathTm : PathTm . DOT INTV  (58)

	DOT  shift 65
	UNIT  reduce 51
	WHERE  reduce 51
	IN  reduce 51
	THEN  reduce 51
	ELSE  reduce 51
	TRUE  reduce 51
	FALSE  reduce 51
	LCID  reduce 51
	INTV  reduce 51
	FLOATV  reduce 51
	STRINGV  reduce 51
	COMMA  reduce 51
	LCUR  reduce 51
	LPAREN  reduce 51
	LSQUARE  reduce 51
	RCUR  reduce 51
	RPAREN  reduce 51
	SEMI  reduce 51
	DSEMI  reduce 51


state 35
	Tm : LET LCID . EQ Tm IN Tm  (42)

	EQ  shift 72
	.  error


state 36
	Tm : LET LCUR . UCID COMMA LCID RCUR EQ Tm IN Tm  (46)

	UCID  shift 73
	.  error


state 37
	Tm : LET USCORE . EQ Tm IN Tm  (43)

	EQ  shift 74
	.  error


state 38
	AppTm : SUCC PathTm .  (52)
	PathTm : PathTm . DOT LCID  (57)
	PathTm : PathTm . DOT INTV  (58)

	DOT  shift 65
	UNIT  reduce 52
	WHERE  reduce 52
	IN  reduce 52
	THEN  reduce 52
	ELSE  reduce 52
	TRUE  reduce 52
	FALSE  reduce 52
	LCID  reduce 52
	INTV  reduce 52
	FLOATV  reduce 52
	STRINGV  reduce 52
	COMMA  reduce 52
	LCUR  reduce 52
	LPAREN  reduce 52
	LSQUARE  reduce 52
	RCUR  reduce 52
	RPAREN  reduce 52
	SEMI  reduce 52
	DSEMI  reduce 52


state 39
	AppTm : PRED PathTm .  (53)
	PathTm : PathTm . DOT LCID  (57)
	PathTm : PathTm . DOT INTV  (58)

	DOT  shift 65
	UNIT  reduce 53
	WHERE  reduce 53
	IN  reduce 53
	THEN  reduce 53
	ELSE  reduce 53
	TRUE  reduce 53
	FALSE  reduce 53
	LCID  reduce 53
	INTV  reduce 53
	FLOATV  reduce 53
	STRINGV  reduce 53
	COMMA  reduce 53
	LCUR  reduce 53
	LPAREN  reduce 53
	LSQUARE  reduce 53
	RCUR  reduce 53
	RPAREN  reduce 53
	SEMI  reduce 53
	DSEMI  reduce 53


state 40
	AppTm : ISZERO PathTm .  (54)
	PathTm : PathTm . DOT LCID  (57)
	PathTm : PathTm . DOT INTV  (58)

	DOT  shift 65
	UNIT  reduce 54
	WHERE  reduce 54
	IN  reduce 54
	THEN  reduce 54
	ELSE  reduce 54
	TRUE  reduce 54
	FALSE  reduce 54
	LCID  reduce 54
	INTV  reduce 54
	FLOATV  reduce 54
	STRINGV  reduce 54
	COMMA  reduce 54
	LCUR  reduce 54
	LPAREN  reduce 54
	LSQUARE  reduce 54
	RCUR  reduce 54
	RPAREN  reduce 54
	SEMI  reduce 54
	DSEMI  reduce 54


state 41
	Tm : LAM UCID . OTy DOT Tm  (45)
	OTy : .  (16)

	SUB  shift 44
	DOT  reduce 16

	OTy  goto 75


state 42
	Tm : LAM LCID . COLON Ty DOT Tm  (44)

	COLON  shift 76
	.  error


state 43
	Tm : IF Tm . THEN Tm ELSE Tm  (47)

	THEN  shift 77
	.  error


state 44
	OTy : SUB . Ty  (17)

	ALL  shift 78
	SOME  shift 79
	TOP  shift 80
	STRING  shift 81
	FLOAT  shift 82
	UNITTYPE  shift 83
	BOOL  shift 84
	NAT  shift 85
	UCID  shift 86
	LCUR  shift 87
	LPAREN  shift 88
	.  error

	Ty  goto 89
	ArrTy  goto 90
	ATy  goto 91


state 45
	TyBinder : EQ . Ty  (13)

	ALL  shift 78
	SOME  shift 79
	TOP  shift 80
	STRING  shift 81
	FLOAT  shift 82
	UNITTYPE  shift 83
	BOOL  shift 84
	NAT  shift 85
	UCID  shift 86
	LCUR  shift 87
	LPAREN  shift 88
	.  error

	Ty  goto 92
	ArrTy  goto 90
	ATy  goto 91


state 46
	Command : UCID TyBinder .  (10)

	.  reduce 10


state 47
	TyBinder : OTy .  (12)

	.  reduce 12


state 48
	Binder : COLON . Ty  (14)

	ALL  shift 78
	SOME  shift 79
	TOP  shift 80
	STRING  shift 81
	FLOAT  shift 82
	UNITTYPE  shift 83
	BOOL  shift 84
	NAT  shift 85
	UCID  shift 86
	LCUR  shift 87
	LPAREN  shift 88
	.  error

	Ty  goto 93
	ArrTy  goto 90
	ATy  goto 91


state 49
	Binder : EQ . Tm  (15)

	LETREC  shift 4
	FIX  shift 5
	UNIT  shift 6
	LET  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LAM  shift 11
	IF  shift 12
	TRUE  shift 13
	FALSE  shift 14
	LCID  shift 33
	INTV  shift 17
	FLOATV  shift 18
	STRINGV  shift 19
	LCUR  shift 21
	LPAREN  shift 22
	.  error

	Tm  goto 94
	AppTm  goto 27
	PathTm  goto 28
	AscribeTm  goto 29
	ATm  goto 30


state 50
	Command : LCID Binder .  (11)

	.  reduce 11


state 51
	ATm : LCID .  (65)
	Fld : LCID . EQ Tm  (78)

	EQ  shift 95
	TIMESFLOAT  reduce 65
	AS  reduce 65
	UNIT  reduce 65
	TRUE  reduce 65
	FALSE  reduce 65
	LCID  reduce 65
	INTV  reduce 65
	FLOATV  reduce 65
	STRINGV  reduce 65
	COMMA  reduce 65
	DOT  reduce 65
	LCUR  reduce 65
	LPAREN  reduce 65
	LSQUARE  reduce 65
	RCUR  reduce 65


state 52
	ATm : LCUR STAR . Ty COMMA Tm RCUR AS Ty  (63)

	ALL  shift 78
	SOME  shift 79
	TOP  shift 80
	STRING  shift 81
	FLOAT  shift 82
	UNITTYPE  shift 83
	BOOL  shift 84
	NAT  shift 85
	UCID  shift 86
	LCUR  shift 87
	LPAREN  shift 88
	.  error

	Ty  goto 96
	ArrTy  goto 90
	ATy  goto 91


state 53
	Fld : Tm .  (79)

	.  reduce 79


state 54
	ATm : LCUR Flds . RCUR  (64)

	RCUR  shift 97
	.  error


state 55
	Flds : NEFlds .  (75)

	.  reduce 75


state 56
	NEFlds : Fld .  (76)
	NEFlds : Fld . COMMA NEFlds  (77)

	COMMA  shift 98
	RCUR  reduce 76


state 57
	TmSeq : Tm .  (72)
	TmSeq : Tm . SEMI TmSeq  (73)

	SEMI  shift 99
	RPAREN  reduce 72


state 58
	ATm : LPAREN TmSeq . RPAREN  (62)

	RPAREN  shift 100
	.  error


state 59
	toplevel : Command SEMI . toplevel  (8)
